--- a/Store.Web/Views/Shared/_Layout.cshtml
+++ b/Store.Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,27 @@
               <input class="form-control mr-sm-2" type="search" name="query" placeholder="автор или название"/>
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
           </form>
+          <span class="navbartext-black ml-auto">
+                @{
+                    Cart cart;
+                    if (!Context.Session.TryGetCart(out cart))
+                        cart = new Cart();
+                    if(cart.Items.Count == 0)
+                    
+                    {
+                     
+                        @:Корзина пустая
+                    }
+                    else
+                    {
+                        @:Товаров @cart.Items.Count на сумму @cart.Amount
+                    }
+
+                }
+
+          </span>
+
+
         </nav>
     </header>
     <div class="container">
